<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="75dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java"
            android:textSize="32sp"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/quiz"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>

    <Button
        android:id="@+id/start_quiz_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/start_quiz"
        android:textSize="16sp"
        android:background="@drawable/clear_rect"
        />

</LinearLayout>